[tool.poetry]
name = "calculation-money"
version = "0.1.0"
description = ""
authors = ["Nikolay Tarasov <kolya.tarasov333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.0.0"
mypy = "^1.10.0"
isort = "^5.13.2"
black = "^24.4.2"
pandas = "^2.2.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
